syntax = "proto3";
option go_package = ".ChatProto";
package chat;

message CourseDocument {
  string URL = 1;
  int32 CourseID = 2;
}

message Empty{}

message UserMessage {
  int32 CourseID = 1;
  int32 SessionID = 5;
  string Content = 2;
  string FileURL = 3;
  int32 TemplateType = 4;
}

message ChatModelResponse {
  string content = 1;
}

service Chat {
  rpc UploadDocument(CourseDocument) returns (Empty);
  rpc SendStreamMessage(UserMessage) returns (stream ChatModelResponse);
}